# fxdsp

./: CMakeLists.txt  LICENSE  README.md  dsp.cpp  dsp.h  jni.cpp  log.cpp  log.h  pcm.cpp  pcm.h  sink.cpp  sink.h  types.h  wave.cpp  wave.h
cli/: filter.h  filter_fr_sweep.cpp  filter_test.cpp  fr_sweep.h  gen_fr_test_combined.cpp  gen_fr_test_sweep.cpp
effects/: convolver.cpp  convolver.h  gain.cpp  gain.h  geq_common.cpp  geq_common.h  graphic_eq_fir.cpp  graphic_eq_fir.h  graphic_eq_iir.cpp  graphic_eq_iir.h  noise.cpp  noise.h  parametric_eq.cpp  parametric_eq.h  silence.cpp  silence.h
filters/: biquad.cpp  biquad.h  fir_design.cpp  fir_design.h
sinks/: collecting_float.cpp  collecting_float.h  collecting_s16.cpp  collecting_s16.h  oboe.cpp  oboe.h
util/: amplitude.cpp  amplitude.h  debug.cpp  debug.h  fft.cpp  fft.h  graph.cpp  graph.h  math_ext.h  window.cpp  window.h
